[package]
name = "applepw"
version = "0.1.5"
authors = ["Alec Harmon <alecharmon@outlook.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
toml = "0.8"
daemonize = "0.5"
lazy_static = "1.4"
sha2 = "0.10"
aes-gcm = "0.10"
aes = "0.8"
typenum = "1.17"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
rand = "0.8"
base64 = "0.22"
dirs = "5.0"
anyhow = "1.0"
libc = "0.2"
hex = "0.4"
hmac = "0.12"
crypto-common = "0.1"
generic-array = "0.14"
uuid = { version = "1.8", features = ["v5"] }
